Added final version.

--- a/paper.bib
+++ b/paper.bib
@@ -32,6 +32,13 @@
   year    = {2003}
 }
 
+@mastersthesis{bates04,
+	author = {Bates, E},
+	school = {Trinity College Dublin},
+	title = {Composing, Perceiving and Developing Real-time Granulation in Surround Sound},
+	year = {2004}
+}
+
 @inproceedings{roads12,
   author          = {Roads, C},
   booktitle       = {Proceedings of the international Symposium "{Xenakis}. {La} musique électroacoustique"},
@@ -51,7 +58,8 @@
 @online{argotlunar,
 	author = {Ourednik, M},
 	title = {Argotlunar},
-	year = {},
+	note = {Source code},
+	year = {2021},
 	url = {https://github.com/mourednik/argotlunar},
 	urldate = {2022-05-03}
 }
