Updated graphs. Slightly changed conclusions drawn from them.

--- a/paper.tex
+++ b/paper.tex
@@ -346,10 +346,10 @@ The obvious takeaway from this data is that the \textit{random chance} algorithm
 	\label{fig:scd_cycle_time_detail}
 \end{figure}
 
-This graph shows comparable performance for the \textit{deterministic} and \textit{random start} approaches. A result like this is to be expected, as these methods share the same anatomy. As one might expect, the stochastic version adds some overhead for computing a random number. Still, the two algorithms perform similarly enough to be considered interchangeable.\\
-Next, the \textit{divide-down} approach stands out due to its extremely short processing time. This is likely due to the fact that this method uses a far shorter loop than all other implementations. Instead of stopping at each sample in the block, it increments its position by a calculated interval. Because of this implementation, the loop has less code to execute, and thus takes significantly less time.
+This graph shows comparable performance for the \textit{random start} and \textit{divide down} approaches. They both have irregular execution time, which is to be expected when using random variables. The latter, however, takes slightly longer to process, likely due to its reliance on recursion. Still, the two algorithms perform similarly enough to be considered interchangeable.\\
+Next, the \textit{deterministic} approach stands out due to its extremely short processing time. This is likely due to the fact that this method uses a far shorter loop than all other implementations. Instead of stopping at each sample in the block, it increments its position by a calculated interval. Because of this implementation, the loop has less code to execute, and thus takes significantly less time.
 
-Keeping in mind the maximum rendering time of 23$\mu$s, as calculated previously, it's clear that the \textit{random chance} algorithm, with an average rendering time of 135$\mu$s, does not meet the criteria. Comparing the other three outcomes, with averages of 4.8$\mu$s, 4.4$\mu$s, and 5.9$\mu$s respectively, one would likely choose to implement a method with a low rendering time. However, it must be noted that all three algorithms have varying use-cases and render different results. While the \textit{divide down} method might have a short execution time, its output may be too irregular for some applications. Nevertheless, as a product solely of these statistics, it's unlikely that any of the three remaining approaches would offer insufficient performance for most applications.\\
+Keeping in mind the maximum rendering time of 23$\mu$s, as calculated previously, it's clear that the \textit{random chance} algorithm, with an average rendering time of 203$\mu$s, does not meet the criteria. Comparing the other three outcomes, with averages of 843ns, 1.1$\mu$s, and 1.7$\mu$s respectively, one would likely choose to implement a method with a low rendering time. However, it must be noted that all three algorithms have varying use-cases and render different results. While the \textit{deterministic} method might have a short execution time, its output may be too repetitive for some applications. Nevertheless, as a product solely of these statistics, it's unlikely that any of the three remaining approaches would offer insufficient performance for most applications.\\
 
 \subsubsection{Envelopes}
 Next, the benchmark results of the envelope implementations show some interesting details. Before looking at the runtime statistics, let's analyze the initialization times of each algorithm. Figure \ref{fig:env_init_time} shows this data, measured in nanoseconds. Looking at this graph, one will notice that the pre-processing implementation takes significantly longer to initialize than its counterparts. This can be attributed to the way this method renders its data all at once during this initialization phase. However, this probably won't affect the program's execution, as the initialization code is only ran sporadically and does not need to fit within the 23$\mu$s rendering time constraint.\pagebreak
